--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,6 @@
 anthropic>=0.39.0
 openai>=1.50.0
 tiktoken>=0.8.0
-chromadb>=0.5.0
-sentence-transformers>=3.0.0
 pydantic>=2.9.0
 pydantic-settings>=2.5.0
 typer>=0.12.0
@@ -13,9 +11,9 @@ structlog>=24.4.0
 beautifulsoup4>=4.12.0
 lxml>=5.3.0
 
-# Optional: Cloud vector stores
-# pinecone-client>=5.0.0
-# faiss-cpu>=1.9.0
+# Vector store and embeddings
+qdrant-client>=1.12.0
+fastembed>=0.4.0
 
 # Development dependencies
 pytest>=8.3.0
