--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,8 @@
 # Required API Keys
 # =============================================================================
 
-# OpenAI (for embeddings)
+# OpenAI (for embeddings and LLM)
 OPENAI_API_KEY=your-openai-api-key
-
-# Anthropic (for LLM generation)
-ANTHROPIC_API_KEY=your-anthropic-api-key
 
 # =============================================================================
 # Qdrant Vector Store
